--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Primeiro repositório</h1>
+    <h1>Meu álbum de fotos</h1>
   </body>
 </html>
 
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Fanpage de Gatinhos</title>
+    <title>Meu gato, Cachopa</title>
     <meta charset="utf-8">
   </head>
   <body>
